# reddit_scraper

./: .dockerignore  .env  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  prometheus.yml
.github/workflows/: build.yml
databases/: Cargo.toml
databases/kubernetes_subreddit/: create_checkpoint_table.sql  create_posts_table.sql
databases/src/: lib.rs
models/src/: lib.rs
services/analyzer/: Cargo.toml
services/analyzer/src/: lib.rs  main.rs
services/rabbitmq/: Dockerfile  definitions.json  rabbitmq.conf
services/scraper/: Cargo.toml
services/scraper/src/: main.rs
services/web/: Cargo.toml
services/web-frontend/: Dockerfile  package.json
services/web-frontend/src/: App.js
services/web/src/: main.rs
services/worker/: Cargo.toml
services/worker/src/: main.rs
