[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
rusqlite = "0.32.1"
tokio = { version = "1", features = ["full"] }
models = { path = "../../models" }
databases = { path = "../../databases" }
amiquip = "0.4.2"
serde_json = "1.0.125"
